# python-drf

./: .env  pyproject.toml
apps/pizza/: filter.py  models.py  serializers.py  urls.py  views.py
apps/pizza_shop/: serializer.py
configs/: settings.py  urls.py
first/: views.py
mysql/: auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  mysql_upgrade_history  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
mysql/#innodb_redo/: #ib_redo9
mysql/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
mysql/mysql/: general_log_214.sdi  slow_log_215.sdi
mysql/performance_schema/: accounts_146.sdi  binary_log_trans_190.sdi  cond_instances_81.sdi  data_lock_waits_162.sdi  data_locks_161.sdi  error_log_82.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_errors_su_144.sdi  events_stages_cu_112.sdi  events_stages_hi_113.sdi  events_stages_hi_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  events_stages_su_119.sdi  events_statement_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_123.sdi  events_statement_124.sdi  events_statement_125.sdi  events_statement_126.sdi  events_statement_127.sdi  events_statement_128.sdi  events_statement_129.sdi  events_statement_130.sdi  (+82 more)
pizza/: views.py
users/: models.py  serializers.py  views.py
(+6 files in other folders)
