[project]
name = "python-drf"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrii-77",email = "andrijsmaga@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "djangorestframework (>=3.15.2,<4.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "django-dotenv (>=1.4.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"

